--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@ parts/
 prime/
 stage/
 *.snap
-
+*.deb
 # Snapcraft global state tracking data(automatically generated)
 # https://forum.snapcraft.io/t/location-to-save-global-state/768
 /snap/.snapcraft/
